# stl10-cnn-compe

./: .gitignore  README.md  pyproject.toml
src/: data.py  main.py  plot.py
