[project]
name = "stl10-cnn-compe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.1",
    "matplotlib>=3.9.2",
    "optuna>=4.0.0",
    "optuna-dashboard>=0.16.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "timm>=1.0.11",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.5",
    "uuid7>=0.1.0",
]
